--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,4 +4,4 @@ global:
 scrape_configs:
   - job_name: 'flask-app'
     static_configs:
-      - targets: ['web:5000']
+      - targets: ['flaskproj:5000']
